@@ -14,6 +14,7 @@ phpMyAdmin - ChangeLog
 - bug #3531585 [interface] Broken password validation in copy user form
 - bug #3531586 [unterface] Add user form prints JSON when user presses enter
 - bug #3534121 [config] duplicate line in config.sample.inc.php
+- bug #3534311 [interface] Grid editing incorrectly parses ENUM/SET values
 
 3.5.1.0 (2012-05-03)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
